feature: add security negative cases